--- a/Musify Web/Musify Web/Views/Artists/Index.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model IEnumerable<Musify_Web.Models.Genre>
+﻿@model IEnumerable<Musify_Web.Models.Artist>
 
 @{
-    ViewBag.Title = "Genres";
+    ViewBag.Title = "Artists";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Genres</h2>
-<p><a href="@Url.Action("Create", "Genres")" class="btn btn-primary">Add Genre</a></p>
+<h2>Artists</h2>
+<p><a href="@Url.Action("Create", "Artists")" class="btn btn-primary">Add Artist</a></p>
 <div class="row">
     <div class="col-lg-12">
         <div class="form-group">
@@ -19,19 +19,19 @@
                 <thead>
                 <tr class="info">
                     <th>
-                        @Html.DisplayNameFor(model => model.Name)
+                        Name
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Description)
+                        Biography
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.ImageUrl)
+                        Big Image
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.CreatedAt)
+                        Created At
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.UpdatedAt)
+                        Last Updated
                     </th>
                     <th>
                         Actions
@@ -42,21 +42,21 @@
                 <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr class="@(item.Public == true ? "success" : "danger")">
-                        <td class="clickable-row" data-href="@Url.Action("Artists", new {id = item.Id})">
+                    <tr>
+                        <td class="clickable-row" data-href="@Url.Action("Genres", new {id = item.Id})">
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
-                        <td class="clickable-row" data-href="@Url.Action("Artists", new {id = item.Id})">
-                            @Html.DisplayFor(modelItem => item.Description)
+                        <td class="clickable-row" data-href="@Url.Action("Genres", new {id = item.Id})">
+                            @Html.DisplayFor(modelItem => item.Biography)
                         </td>
-                        <td class="clickable-row" data-href="@Url.Action("Artists", new {id = item.Id})">
-                            @Html.DisplayFor(modelItem => item.ImageUrl)
+                        <td class="clickable-row" data-href="@Url.Action("Genres", new {id = item.Id})">
+                            @Html.DisplayFor(modelItem => item.ImageBigUrl)
                         </td>
-                        <td class="clickable-row" data-href="@Url.Action("Artists", new {id = item.Id})">
+                        <td class="clickable-row" data-href="@Url.Action("Genres", new {id = item.Id})">
                             @Html.DisplayFor(modelItem => item.CreatedAt)
                         </td>
 
-                        <td class="clickable-row" data-href="@Url.Action("Artists", new {id = item.Id})">
+                        <td class="clickable-row" data-href="@Url.Action("Genres", new {id = item.Id})">
                             @if (item.UpdatedAt != item.CreatedAt)
                             {
                                 @Html.DisplayFor(modelItem => item.UpdatedAt)
@@ -67,14 +67,11 @@
                             }
                         </td>
                         <td>
-                            <a href="@Url.Action("Edit", "Genres", new {id = item.Id})" class="btn btn-warning">Edit</a>
+                            <a href="@Url.Action("Edit", "Artists", new {id = item.Id})" class="btn btn-warning">Edit</a>
                         </td>
 
                         <td>
-                            @if (item.Public != true)
-                            {
-                                <a href="@Url.Action("Delete", "Genres", new {id = item.Id})" class="btn btn-danger">Delete</a>
-                            }
+                            <a href="@Url.Action("Delete", "Artists", new {id = item.Id})" class="btn btn-danger">Delete</a>
                         </td>
 
                     </tr>
@@ -84,3 +81,4 @@
         </div>
     </div>
 </div>
+
