DropDownList Search filter Added, Preperations for Routing,
Added a DropDownList Search filter.
Added the RouteAttribute in the Route File.

--- a/Musify Web/Musify Web/Content/Site.css
+++ b/Musify Web/Musify Web/Content/Site.css
@@ -70,4 +70,8 @@ table tr .clickable-row {
        background-color: #f1f1f1;
     }
 
+.bootstrap-select > .dropdown-toggle.bs-placeholder, .bootstrap-select > .dropdown-toggle.bs-placeholder:hover, .bootstrap-select > .dropdown-toggle.bs-placeholder:focus, .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
+    color: #fff;
+}
+
 
