--- a/Musify Web/Musify Web/Views/Artists/Create.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/Create.cshtml
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputImageSmall" class="col-lg-2 control-label">Image URL</label>
+                <label for="inputImageSmall" class="col-lg-2 control-label">Thumbnail</label>
                 <div class="col-lg-10">
 
                     @Html.TextBoxFor(model => model.ImageSmallUrl, new { @class = "form-control", @id = "inputImageSmall", @placeholder = "Thumbnail of artist", @type = "text" })
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputImageBig" class="col-lg-2 control-label">Image URL</label>
+                <label for="inputImageBig" class="col-lg-2 control-label">Image</label>
                 <div class="col-lg-10">
 
                     @Html.TextBoxFor(model => model.ImageBigUrl, new { @class = "form-control", @id = "inputImageBig", @placeholder = "Image of artist", @type = "text" })
