--- a/Musify Web/Musify Web/Views/Genres/Index.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Index.cshtml
@@ -6,8 +6,11 @@
 }
 
 <h2>Genres</h2>
-<p><a href="@Url.Action("Create", "Genres")" class="btn btn-primary">Add Genre</a></p>
+
 <div class="row">
+    <div class="col-lg-12">
+        <p><a href="@Url.Action("Create", "Genres")" class="btn btn-primary btn-block btn-lg">Add Genre</a></p>
+    </div>
     <div class="col-lg-12">
         <div class="form-group">
             <input type="text" id="searchBar" onkeyup="searchItem()" placeholder="Search for Artist..">
