AlbumOverView of all albums, AlbumOverview of Artist Albums Added
You are now able to see an overview of all albums on the system.
You are now able to see all albums of a specific artist.

Albums and Genres are placed together on the Details page.
TO-DO : Add max rows per page.

--- a/Musify Web/Musify Web/Views/Album/AllAlbums.cshtml
+++ b/Musify Web/Musify Web/Views/Album/AllAlbums.cshtml
@@ -1,57 +1,92 @@
 ﻿@model IEnumerable<Musify_Web.Models.Album>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageBigUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageSmallUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReleaseDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageBigUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageSmallUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedAt)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@{
+    ViewBag.Title = "Artists";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-</table>
+<h2>All Albums</h2>
+<div class="col-lg-12">
+        <p><a href="@Url.Action("Create", "Album")" class="btn btn-primary btn-block btn-lg">Add Artist</a></p>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="form-group">
+            <input type="text" id="searchBar" onkeyup="searchItem()" placeholder="Search for Artist..">
+        </div>
+    </div>
+    <div class="col-lg-12">
+        <div class="table-responsive">
+            <table class="table table-striped table-hover" id="indexTbl">
+                <thead>
+                    <tr class="info">
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Release Date
+                        </th>
+                        <th>
+                            Image
+                        </th>
+                        <th>
+                            Artist
+                        </th>
+                        <th>
+                            Created At
+                        </th>
+                        <th>
+                            Last Updated
+                        </th>
+                        <th>
+                            Actions
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @Html.DisplayFor(modelItem => item.ReleaseDate)
+                            </td>
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @Html.DisplayFor(modelItem => item.ImageBigUrl)
+                            </td>
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @Html.DisplayFor(modelItem => item.Artist.Name)
+                            </td>
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @Html.DisplayFor(modelItem => item.CreatedAt)
+                            </td>
+
+                            <td class="clickable-row" data-href="@Url.Action("AllAlbums", new {id = item.Id})">
+                                @if (item.UpdatedAt != item.CreatedAt)
+                                {
+                                    @Html.DisplayFor(modelItem => item.UpdatedAt)
+                                }
+                                else
+                                {
+                                    @:-
+                            }
+                            </td>
+                            <td>
+                                <a href="@Url.Action("Edit", "Artists", new {id = item.Id})" class="btn btn-warning">Edit</a>
+                            </td>
+
+                            <td>
+                                <a href="@Url.Action("Delete", "Artists", new {id = item.Id})" class="btn btn-danger">Delete</a>
+                            </td>
+
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
