--- a/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
+++ b/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Genres", "Index", "Genres")</li>
                     <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
+                    <li>@Html.ActionLink("Artists", "AllAlbums", "Album")</li>
                 </ul>
             </div>
         </div>
