--- a/Musify Web/Musify Web/Views/Album/Songs.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Songs.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="form-group">
-            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Album", new { artistId = Model.Id })">Add new Album to @Model.Name</a>
+            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Songs", new { artistId = Model.Id })">Add new Album to @Model.Name</a>
         </div>
     </div>
     <div class="col-lg-12">
@@ -36,6 +36,7 @@
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>@Html.DisplayFor(modelItem => item.Number)</td>
                         <td>@Html.DisplayFor(modelItem => item.Duration)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Album.Name)</td>
                         
                         <td><a class="btn btn-warning" href="@Url.Action("Edit", "Album", new { artistId = Model.Id, albumId = item.Id })">Edit</a></td>
                         <td><a class="btn btn-danger" href="@Url.Action("Delete", "Album", new { artistId = Model.Id, albumId = item.Id })">Delete</a></td>
