Song listing Load Time Decreased, Edit & Delete Setup
Small Decrease in Song listing Load Time of the page.
Start of Edit & Delete song has been made,

--- a/Musify Web/Musify Web/Views/Artists/Albums.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/Albums.cshtml
@@ -24,7 +24,7 @@
             <thead>
             <tr>
                 <th>Name</th>
-                <th>Description</th>
+                <th>Release Date</th>
                 <th>Image</th>
 
             </tr>
