--- a/Musify Web/Musify Web/Views/Album/Songs.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Songs.cshtml
@@ -1,12 +1,9 @@
 ﻿@model Musify_Web.Models.Album
 
 @{
-    ViewBag.Title = "Albums";
+    ViewBag.Title = "Songs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Songs</h2>
-
 
 <div class="row">
     <div class="col-lg-12">
@@ -22,36 +19,29 @@
     <div class="col-lg-12">
         <table class="table table-striped table-hover" id="indexTbl">
             <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Duration</th>
+            <tr>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Duration</th>
+                <th>Album</th>
 
-                </tr>
+            </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.Songs)
+            @foreach (var item in Model.Songs)
             {
-                    <tr>
-                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Number)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Duration)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Album.Name)</td>
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Number)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Duration)</td>
+                    <td>@Html.DisplayFor(modelItem => Model.Name)</td>
                         
-                        <td><a class="btn btn-warning" href="@Url.Action("Edit", "Album", new { artistId = Model.Id, albumId = item.Id })">Edit</a></td>
-                        <td><a class="btn btn-danger" href="@Url.Action("Delete", "Album", new { artistId = Model.Id, albumId = item.Id })">Delete</a></td>
-                    </tr>
-                }
+                    <td><a class="btn btn-warning" href="@Url.Action("Edit", "Songs", new { albumId = Model.Id, songId = item.Id })">Edit</a></td>
+                    <td><a class="btn btn-danger" href="@Url.Action("Delete", "Songs", new { albumId = Model.Id, songId = item.Id })">Delete</a></td>
+                </tr>
+            }
 
             </tbody>
         </table>
     </div>
 </div>
-
-
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-
-
