--- a/Musify Web/Musify Web/Views/Album/Songs.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Songs.cshtml
@@ -1,14 +1,15 @@
-﻿@model Musify_Web.Models.Album
+﻿@model IEnumerable<Musify_Web.Models.Song>
 
 @{
     ViewBag.Title = "Songs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Edit</h2>
 
 <div class="row">
     <div class="col-lg-12">
         <div class="form-group">
-            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Songs", new { artistId = Model.Id })">Add new Album to @Model.Name</a>
+            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Songs")">Add new Album to </a>
         </div>
     </div>
     <div class="col-lg-12">
@@ -28,16 +29,15 @@
             </tr>
             </thead>
             <tbody>
-            @foreach (var item in Model.Songs)
+            @foreach (var item in Model)
             {
                 <tr>
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Number)</td>
                     <td>@Html.DisplayFor(modelItem => item.Duration)</td>
-                    <td>@Html.DisplayFor(modelItem => Model.Name)</td>
                         
-                    <td><a class="btn btn-warning" href="@Url.Action("Edit", "Songs", new { albumId = Model.Id, songId = item.Id })">Edit</a></td>
-                    <td><a class="btn btn-danger" href="@Url.Action("Delete", "Songs", new { albumId = Model.Id, songId = item.Id })">Delete</a></td>
+                    <td><a class="btn btn-warning" href="@Url.Action("Edit", "Songs", new { albumId = item.Album.Id ,songId = item.Id })">Edit</a></td>
+                    <td><a class="btn btn-danger" href="@Url.Action("Delete", "Songs", new { albumId = item.Album.Id, songId = item.Id })">Delete</a></td>
                 </tr>
             }
 
