--- a/Musify Web/Musify Web/Views/Songs/Edit.cshtml
+++ b/Musify Web/Musify Web/Views/Songs/Edit.cshtml
@@ -66,6 +66,9 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
+                @Html.HiddenFor(model => model.Id)
+                @Html.HiddenFor(model => model.Album.Id)
+                @Html.HiddenFor(model => model.Artists)
                 @Html.ActionLink("Cancel", "Index", "Artists", null, new {@class = "btn btn-default"})
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
