--- a/Musify Web/Musify Web/Views/Album/Songs.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Songs.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="form-group">
-            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Songs")">Add new Album to </a>
+            <a class="btn btn-primary btn-block btn-lg" href="@Url.Action("Create", "Songs")">Add new Song</a>
         </div>
     </div>
     <div class="col-lg-12">
