--- a/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
+++ b/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
@@ -8,44 +8,103 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/header")
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Musify", "ClientGenres", "Genres", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "ClientGenres", "Genres")</li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a> 
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Genres", "Index", "Genres")</li>
-                            <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
-                            <li>@Html.ActionLink("Albums", "AllAlbums", "Album")</li>
-                        </ul>
-                    </li>
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("Musify", "ClientGenres", "Genres", new { area = "" }, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "ClientGenres", "Genres")</li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a> 
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("Genres", "Index", "Genres")</li>
+                        <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
+                        <li>@Html.ActionLink("Albums", "AllAlbums", "Album")</li>
+                    </ul>
+                </li>
                     
-                </ul>
-            </div>
+            </ul>
+            <form class="navbar-form navbar-left pull-right search" role="search" _lpchecked="1">
+                <div class="form-group">
+                    <input class="form-control" placeholder="Search..." type="text" id="searchBarId">
+                </div>
+            </form>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+</div>
+<div class="container body-content">
+    @RenderBody()
+    <hr />
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
+</div>
 
     
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/footer")
-    @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/bundles/footer")
+@RenderSection("scripts", required: false)
+    
+    <script type="text/javascript">
+
+    $(document).ready(function () {
+        $('#results').hide();
+    });
+    $("#searchBarId").autocomplete({
+        source: function(request, response) {
+            var artist = new Array();
+            $.ajax({
+                async: false,
+                cache: false,
+                type: "POST",
+                url: "@(Url.Action("Autocomplete", "Search"))",
+                data: { "content": request.term },
+                success: function(data) {
+                    for (var i = 0; i < data.length; i++) {
+                        artist[i] = {
+                            label: data[i].Value,
+                            Id: data[i].Key
+                        };
+                    }
+                }
+            });
+            response(artist);
+        },
+        select: function(event, ui) {
+            //fill selected customer details on form
+            var url = '@Url.Action("ClientArtistDetails", "Artists", new { id = "param" })';
+            $.ajax({
+                cache: false,
+                async: false,
+                type: "POST",
+                url: "@(Url.Action("GetArtistById", "Search"))",
+                data: { "id": ui.item.Id },
+
+                success: function (data) {
+                    location.href = url.replace('param', data.Id);
+                },
+                error: function(xhr, ajaxOptions, thrownError) {
+                    alert('Failed to retrieve states.');
+                }
+            });
+        },
+        open: function () {
+            $(this).data("uiAutocomplete").menu.element.addClass("results");
+        },
+        appendTo: ".search"
+    });
+
+    </script>
 </body>
 </html>
+
