--- a/Musify Web/Musify Web/Views/Genres/ClientGenres.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/ClientGenres.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Musify_Web.Models.Genre>
 
 @{
-    ViewBag.Title = "ClientGenres";
+    ViewBag.Title = "Genre Overview";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h1>Welcome to Musify</h1>
