--- a/Musify Web/Musify Web/Views/Album/Create.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Create.cshtml
@@ -25,6 +25,7 @@
                 <div class="col-lg-10">
                     
                     @Html.TextBoxFor(model => model.ReleaseDate, new { @class = "form-control", @id = "inputDate", @placeholder = "Set a Date", @type = "text" })
+                    @Html.ValidationMessageFor(model => model.ReleaseDate)
                 </div>
             </div>
 
@@ -47,6 +48,7 @@
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
                     @Html.ActionLink("Cancel", "AllAlbums", "Album", new {@class = "btn btn-default"})
+                    @Html.AntiForgeryToken()
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
