--- a/Musify Web/Musify Web/Views/Album/Edit.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Edit.cshtml
@@ -48,6 +48,7 @@
                     @Html.HiddenFor(model => model.Id)
                     @Html.HiddenFor(model => model.Artist.Id)
                     @Html.ActionLink("Cancel", "Index", "Artists", null, new {@class = "btn btn-default"})
+                    @Html.AntiForgeryToken()
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
