--- a/Musify Web/Musify Web/Views/Artists/DeleteGenreFromArtist.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/DeleteGenreFromArtist.cshtml
@@ -13,6 +13,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="form-group">
+                    @Html.AntiForgeryToken()
                     <button type="submit" class="btn btn-danger btn-lg btn-block">Delete @Model.Genre.Name from @Model.Artist.Name</button>
                 </div>
             </div>
