--- a/Musify Web/Musify Web/Views/Genres/Create.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Create.cshtml
@@ -47,7 +47,8 @@
             
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default" })
+                    @Html.AntiForgeryToken()
+                    @Html.ActionLink("Cancel", "Index", null, new {@class = "btn btn-default"})
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
