--- a/Musify Web/Musify Web/Views/Genres/Edit.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Edit.cshtml
@@ -48,6 +48,7 @@
 
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
+                    @Html.AntiForgeryToken()
                     @Html.ActionLink("Cancel", "Index", null, new {@class = "btn btn-default"})
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
