--- a/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
+++ b/Musify Web/Musify Web/Views/Shared/_Layout.cshtml
@@ -8,8 +8,6 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/header")
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -34,9 +32,18 @@
                 </li>
                     
             </ul>
-            <form class="navbar-form navbar-left pull-right search" role="search" _lpchecked="1">
+            <form class="navbar-form navbar-right search" role="search" _lpchecked="1">
                 <div class="form-group">
                     <input class="form-control" placeholder="Search..." type="text" id="searchBarId">
+                </div>
+                <div class="form-group">
+                    <select class="form-control" id="myOption" name="category" onmousedown="this.value = '';" onchange="searchFunction(this.value);">
+                        <option value="1">Artist</option>
+                        <option value="2">Song</option>
+                        <option value="3">Album</option>
+                        <option value="4">User</option>
+                        <option value="5">Genre</option>
+                    </select>
                 </div>
             </form>
         </div>
@@ -46,7 +53,7 @@
     @RenderBody()
     <hr />
     <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; @DateTime.Now.Year - Musify</p>
     </footer>
 </div>
 
@@ -55,56 +62,224 @@
 @Scripts.Render("~/bundles/footer")
 @RenderSection("scripts", required: false)
     
-    <script type="text/javascript">
+<script type="text/javascript">
+    function searchFunction(value) {
+        if (value == 1) {
+            searchArtist();
+        } else if (value == 2) {
+            searchSong();
+        } else if (value == 3) {
+            searchAlbum();
+        } else if (value == 4) {
+            searchUser();
+        } else if (value == 5) {
+            searchGenre();
+        } else {
+            searchArtist();
+        }
+    }
 
-    $(document).ready(function () {
-        $('#results').hide();
-    });
-    $("#searchBarId").autocomplete({
-        source: function(request, response) {
-            var artist = new Array();
-            $.ajax({
-                async: false,
-                cache: false,
-                type: "POST",
-                url: "@(Url.Action("Autocomplete", "Search"))",
-                data: { "content": request.term },
-                success: function(data) {
-                    for (var i = 0; i < data.length; i++) {
-                        artist[i] = {
-                            label: data[i].Value,
-                            Id: data[i].Key
-                        };
+    function searchArtist() {
+        $(document).ready(function () {
+            $('#results').hide();
+        });
+        $("#searchBarId").autocomplete({
+            source: function(request, response) {
+                var artist = new Array();
+                $.ajax({
+                    async: false,
+                    cache: false,
+                    type: "POST",
+                    url: "@(Url.Action("Autocomplete", "Artists"))",
+                    data: { "content": request.term },
+                    success: function(data) {
+                        for (var i = 0; i < data.length; i++) {
+                            artist[i] = {
+                                label: data[i].Value,
+                                Id: data[i].Key
+                            };
+                        }
                     }
-                }
-            });
-            response(artist);
-        },
-        select: function(event, ui) {
-            //fill selected customer details on form
-            var url = '@Url.Action("ClientArtistDetails", "Artists", new { id = "param" })';
-            $.ajax({
-                cache: false,
-                async: false,
-                type: "POST",
-                url: "@(Url.Action("GetArtistById", "Search"))",
-                data: { "id": ui.item.Id },
+                });
+                response(artist);
+            },
+            select: function(event, ui) {
+                //fill selected customer details on form
+                var url = '@Url.Action("ClientArtistDetails", "Artists", new { id = "param" })';
+                $.ajax({
+                    cache: false,
+                    async: false,
+                    type: "POST",
+                    url: "@(Url.Action("GetArtistById", "Artists"))",
+                    data: { "id": ui.item.Id },
 
-                success: function (data) {
-                    location.href = url.replace('param', data.Id);
-                },
-                error: function(xhr, ajaxOptions, thrownError) {
-                    alert('Failed to retrieve states.');
-                }
-            });
-        },
-        open: function () {
-            $(this).data("uiAutocomplete").menu.element.addClass("results");
-        },
-        appendTo: ".search"
-    });
+                    success: function (data) {
+                        location.href = url.replace('param', data.Id);
+                        action = data.Action;
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                        alert('Failed to retrieve states.');
+                    }
+                });
+            },
+            open: function () {
+                $(this).data("uiAutocomplete").menu.element.addClass("results");
+            },
+            appendTo: ".search",
+        });
+    }
 
-    </script>
+    function searchAlbum() {
+        $(document).ready(function () {
+            $('#results').hide();
+        });
+        $("#searchBarId").autocomplete({
+            source: function(request, response) {
+                var artist = new Array();
+                $.ajax({
+                    async: false,
+                    cache: false,
+                    type: "POST",
+                    url: "@(Url.Action("Autocomplete", "Album"))",
+                    data: { "content": request.term },
+                    success: function(data) {
+                        for (var i = 0; i < data.length; i++) {
+                            artist[i] = {
+                                label: data[i].Value,
+                                Id: data[i].Key
+                            };
+                        }
+                    }
+                });
+                response(artist);
+            },
+            select: function(event, ui) {
+                //fill selected customer details on form
+                var url = '@Url.Action("ClientAlbumOverview", "Album", new { id = "param" })';
+                $.ajax({
+                    cache: false,
+                    async: false,
+                    type: "POST",
+                    url: "@(Url.Action("GetAlbumById", "Album"))",
+                    data: { "id": ui.item.Id },
+
+                    success: function (data) {
+                        location.href = url.replace('param', data);
+                        action = data.Action;
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                        alert('Failed to retrieve states.');
+                    }
+                });
+            },
+            open: function () {
+                $(this).data("uiAutocomplete").menu.element.addClass("results");
+            },
+            appendTo: ".search"
+        });
+    }
+
+    function searchSong() {
+        $(document).ready(function () {
+            $('#results').hide();
+        });
+        $("#searchBarId").autocomplete({
+            source: function(request, response) {
+                var artist = new Array();
+                $.ajax({
+                    async: false,
+                    cache: false,
+                    type: "POST",
+                    url: "@(Url.Action("Autocomplete", "Songs"))",
+                    data: { "content": request.term },
+                    success: function(data) {
+                        for (var i = 0; i < data.length; i++) {
+                            artist[i] = {
+                                label: data[i].Value,
+                                Id: data[i].Key
+                            };
+                        }
+                    }
+                });
+                response(artist);
+            },
+            select: function(event, ui) {
+                //fill selected customer details on form
+                $.ajax({
+                    cache: false,
+                    async: false,
+                    type: "POST",
+                    url: "@(Url.Action("GetSongById", "Songs"))",
+                    data: { "id": ui.item.Id },
+
+                    success: function (data) {
+                        alert('There is no musicplayer yet!');
+                        action = data.Action;
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                        alert('Failed to retrieve states.');
+                    }
+                });
+            },
+            open: function () {
+                $(this).data("uiAutocomplete").menu.element.addClass("results");
+            },
+            appendTo: ".search"
+        });
+    }
+
+    function searchGenre() {
+        $(document).ready(function () {
+            $('#results').hide();
+        });
+        $("#searchBarId").autocomplete({
+            source: function(request, response) {
+                var artist = new Array();
+                $.ajax({
+                    async: false,
+                    cache: false,
+                    type: "POST",
+                    url: "@(Url.Action("Autocomplete", "Genres"))",
+                    data: { "content": request.term },
+                    success: function(data) {
+                        for (var i = 0; i < data.length; i++) {
+                            artist[i] = {
+                                label: data[i].Value,
+                                Id: data[i].Key
+                            };
+                        }
+                    }
+                });
+                response(artist);
+            },
+            select: function(event, ui) {
+                //fill selected customer details on form-
+                var url = '@Url.Action("ClientArtists", "Artists", new { id = "param" })';
+                $.ajax({
+                    cache: false,
+                    async: false,
+                    type: "POST",
+                    url: "@(Url.Action("GetGenreById", "Genres"))",
+                    data: { "id": ui.item.Id },
+
+                    success: function (data) {
+                        location.href = url.replace('param', data);
+                        action = data.Action;
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                        alert('Failed to retrieve states.');
+                    }
+                });
+            },
+            open: function () {
+                $(this).data("uiAutocomplete").menu.element.addClass("results");
+            },
+            appendTo: ".search"
+        });
+    }
+
+
+</script>
 </body>
 </html>
 
