--- a/Musify Web/Musify Web/Views/Album/Delete.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Delete.cshtml
@@ -56,8 +56,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "AllAlbums", "Album")
+            @Html.ActionLink("Cancel", "Genres", "Artists", new { id = Model.Artist.Id }, new { @class = "btn btn-default" })
+            <input type="submit" value="Delete" class="btn btn-danger"/> 
         </div>
     }
 </div>
