--- a/Musify Web/Musify Web/Views/Artists/Details.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Artist</h4>
+    <br />
+    <h1>Info about <span class="text-primary">@Model.Name</span></h1>
     <hr />
     <dl class="dl-horizontal">
         <dt>
