--- a/Musify Web/Musify Web/Views/Songs/Create.cshtml
+++ b/Musify Web/Musify Web/Views/Songs/Create.cshtml
@@ -12,7 +12,9 @@
 
     <div class="form-horizontal" _lpchecked="1">
         <fieldset>
-            <legend>Legend</legend>
+            <br />
+            <h1>Create Song </h1>
+            <hr />
             <div class="form-group">
                 <label for="inputName" class="col-lg-2 control-label">Song Name</label>
                 <div class="col-lg-10">
