--- a/Musify Web/Musify Web/Views/Album/Details.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Details.cshtml
@@ -62,6 +62,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "AllAlbums")
+    @Html.ActionLink("Cancel", "Genres", "Artists", new { id = Model.Artist.Id }, new { @class = "btn btn-default" })
+    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
 </p>
