--- a/Musify Web/Musify Web/Views/Album/Songs.cshtml
+++ b/Musify Web/Musify Web/Views/Album/Songs.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Songs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>Edit</h2>
+<h2>Songs</h2>
 
 <div class="row">
     <div class="col-lg-12">
