--- a/Musify Web/Musify Web/Views/Artists/AddGenres.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/AddGenres.cshtml
@@ -6,15 +6,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Html.DisplayFor(model => model.Artist.Name)</h2>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" _lpchecked="1">
         <fieldset>
-            <legend>Legend</legend>
+            <br />
+            <h1>Add Genre to <span class="text-primary">@Model.Artist.Name</span></h1>
+            <hr />
             <div class="form-group">
                 <label for="inputName" class="col-lg-2 control-label">Genre</label>
                 <div class="col-lg-10">
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
                     @Html.AntiForgeryToken()
-                    @Html.ActionLink("Cancel", "Index", null, new {@class = "btn btn-default"})
+                    @Html.ActionLink("Cancel", "Genres", "Artists", new { id = Model.Artist.Id }, new { @class = "btn btn-default" })
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
