--- a/Musify Web/Musify Web/Views/Artists/Delete.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h1>Delete Artist <span class="text-primary">@Model.Name</span></h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Artist</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -62,12 +61,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Cancel", "Genres", "Artists", new {id = Model.Id}, new {@class = "btn btn-default"})
+            <input type="submit" value="Delete" class="btn btn-default"/>
         </div>
     }
 </div>
