--- a/Musify Web/Musify Web/Views/Artists/DeleteGenreFromArtist.cshtml
+++ b/Musify Web/Musify Web/Views/Artists/DeleteGenreFromArtist.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Musify_Web.Models.ViewModel.ArtistGenreViewModel
 
-<h3>Are you sure you want to delete @Model.Genre.Name from @Model.Artist.Name?</h3>
-
-
+<br />
+<h1>Are you sure you want to delete <span class="text-primary">@Model.Genre.Name</span> genre from <span class="text-primary">@Model.Artist.Name</span>?</h1>
+<hr />
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
         <div class="row">
