--- a/Musify Web/Musify Web/Views/Genres/Create.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Create.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" _lpchecked="1">
         <fieldset>
-            <legend>Legend</legend>
+            <br />
+            <h1>Add Genre</h1>
+            <hr />
             <div class="form-group">
                 <label for="inputName" class="col-lg-2 control-label">Name</label>
                 <div class="col-lg-10">
@@ -48,7 +48,6 @@
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
                     @Html.AntiForgeryToken()
-                    @Html.ActionLink("Cancel", "Index", null, new {@class = "btn btn-default"})
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
