--- a/Musify Web/Musify Web/Views/Genres/Delete.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Delete.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<br />
+<h1>Delete <span class="text-primary">@Model.Name</span> genre</h1>
+<hr />
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Genre</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -58,8 +58,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Cancel", "Index", "Genres", new { @class = "btn btn-default" })
+            <input type="submit" value="Delete" class="btn btn-danger"/>
         </div>
     }
 </div>
