--- a/Musify Web/Musify Web/Views/Genres/Details.cshtml
+++ b/Musify Web/Musify Web/Views/Genres/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Genre</h4>
+    <br />
+    <h1>Genre Info about <span class="text-primary">@Model.Name</span></h1>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -63,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Cancel", "Index", "Genres", new { @class = "btn btn-default" })
 </p>
