--- a/Musify Web/Musify Web/Views/Songs/Edit.cshtml
+++ b/Musify Web/Musify Web/Views/Songs/Edit.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Song</h4>
+        <br />
+        <h1>Edit Song <span class="text-primary">@Model.Name</span></h1>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -70,13 +69,8 @@
                 @Html.HiddenFor(model => model.Album.Id)
                 @Html.HiddenFor(model => model.Artists)
                 @Html.AntiForgeryToken()
-                @Html.ActionLink("Cancel", "Index", "Artists", null, new {@class = "btn btn-default"})
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
